--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,20 @@
     <string name="label_warning_message">Warning Message</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string-array name="Currencies">
+        <item>ETH</item>
+        <item>BTC</item>
+        <item>XPR</item>
+        <item>NEO</item>
+        <item>$</item>
+    </string-array>
+    <string-array name="Date">
+        <item>Today</item>
+        <item>Yesterday</item>
+        <item>Custom..</item>
+    </string-array>
+    <string-array name="Friends">
+        <item> </item>
+        <item>Gabriel</item>
+    </string-array>
 </resources>
