--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,5 +39,6 @@
     <string-array name="Friends">
         <item> </item>
         <item>Gab</item>
+        <item>Alice</item>
     </string-array>
 </resources>
